# Online_Reader_Project

./: Backend.cpp  CMakeLists.txt  FileManager.cpp  Menu.cpp  Online_Reader.cpp  README.md  Site.cpp  main.cpp
header/: Backend.h  FileManager.h  Headers.h  Menu.h  Online_Reader.h  Site.h
